--- a/h5/forgetPwd.html
+++ b/h5/forgetPwd.html
@@ -50,25 +50,35 @@
 			
 			//  验证码
 			$('.code').click(function(){
-				var tel=$('input[name="tel"]').val();
-				var _this=this;
-				$.ajax({
-			        url: 'http://yichuanglian.huimor.com/index/getsms',
-			        type:'post',
-			        data:{
-			        	mobile:tel,
-			            type:'2',
-			        },
-			        xhrFields:{  
-						withCredentials:true  
-					},  
-			        dataType:'json',
-			        success:function(data){
-			        	if(isLogin(data)){
-		        			codeTime.init(_this);
-			           	}	
-			        }
-			    });
+				var tel = $('input[name="tel"]').val();
+				var _this = this;
+				var telReg = /^[1][3,4,5,7,8][0-9]{9}$/; 
+				if ((tel=='') || (tel.length!=11) || !telReg.test(tel)) {
+					$.toastTip({
+						img:'images/4-3gxfkui.png',
+						imgW:'1.56rem',
+						imgH:'1.5rem',
+						text:['手机号码不正确']
+					});
+				} else {
+					$.ajax({
+				        url: 'http://yichuanglian.huimor.com/index/getsms',
+				        type:'post',
+				        data:{
+				        	mobile:tel,
+				            type:'2',
+				        },
+				        xhrFields:{  
+							withCredentials:true  
+						},  
+				        dataType:'json',
+				        success:function(data){
+				        	if(isLogin(data)){
+			        			codeTime.init(_this);
+				           	}	
+				        }
+				    });
+			    }
 			});
 			
 			//忘记密码
