--- a/h5/buttJointSuccess.html
+++ b/h5/buttJointSuccess.html
@@ -18,17 +18,23 @@
 		</div>
 		
 		<div class="detailsStatus" id="detailsStatus">
-			<div><span>对接状态：</span>对接成功</div>
+			<!-- <div><span>对接状态：</span>对接成功</div>
 			<div><span>实际合同金额：</span><strong>￥1000.00</strong></div>
-			<div><span>实际提成比例：</span><em>10%</em></div>
+			<div><span>实际提成比例：</span><em>10%</em></div> -->
 		</div>
 		
 		<div class="detailsSum">
 			<p>我的上级：</p>
-			<div><img id="upperImg" src="images/img1.jpg" alt="" /><span id="nickName">昵称</span><div id="percentageMoney">提成金额：￥100.00</div></div>
+			<div>
+				<img id="upperImg" src="" alt="" />
+				<span id="nickName"></span>
+				<div id="percentageMoney"></div>
+			</div>
 		</div>
 		<div class="detailsStatus">
-			<div><span>我的分销金额：</span><strong id="assignSaleMoney">￥1000.00</strong></div>
+			<div><span>我的分销金额：</span>
+				<!-- <strong id="assignSaleMoney">￥1000.00</strong> -->
+			</div>
 		</div>
 		
 		
@@ -38,11 +44,11 @@
 				<span></span>
 			</div>
 			<dl id="dockerBox">
-				<dd><span>对接人姓名：</span><div>张玉</div></dd>
+				<!-- <dd><span>对接人姓名：</span><div>张玉</div></dd>
 				<dd><span>联系电话：</span><div>15733223355</div></dd>
 				<dd><span>微信号码：</span><div>zai123456</div></dd>
 				<dd><span>微信昵称：</span><div>不忘初心</div></dd>
-				<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd>
+				<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd> -->
 			</dl>
 		</div>
 		
@@ -55,13 +61,13 @@
 		
 		<div class="detailsDl" id="cluesBox">
 			<dl>
-				<dd><span>发布时间：</span><div>2017-12-21 12:30</div></dd>
+				<!-- <dd><span>发布时间：</span><div>2017-12-21 12:30</div></dd>
 				<dd><span>项目名称：</span><div>ERP系统设计</div></dd>
 				<dd><span>业务类型：</span><div>人力外派</div></dd>
 				<dd><span>行&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业：</span><div>教育</div></dd>
 				<dd><span>项目预算：</span><div>￥100000.00</div></dd>
 				<dd><span>期望提成比例：</span><div>10%</div></dd>
-				<dd><span>项目描述：</span><div>描述文字描述文字描述文字描述文字描述文字描述文字描述文字描述文字</div></dd>
+				<dd><span>项目描述：</span><div>描述文字描述文字描述文字描述文字描述文字描述文字描述文字描述文字</div></dd> -->
 			</dl>
 		</div>
 		
