--- a/h5/buttJointDetails.html
+++ b/h5/buttJointDetails.html
@@ -27,11 +27,11 @@
 					<span></span>
 				</div>
 				<dl id="dockerBox">
-					<dd><span>对接人姓名：</span><div>张玉</div></dd>
+					<!-- <dd><span>对接人姓名：</span><div>张玉</div></dd>
 					<dd><span>联系电话：</span><div>15733223355</div></dd>
 					<dd><span>微信号码：</span><div>zai123456</div></dd>
 					<dd><span>微信昵称：</span><div>不忘初心</div></dd>
-					<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd>
+					<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd> -->
 				</dl>
 			</div>
 			<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
@@ -43,13 +43,13 @@
 			
 			<div class="detailsDl">
 			<dl id="cluesBox">
-				<dd><span>发布时间：</span><div>2017-12-21 12:30</div></dd>
+				<!-- <dd><span>发布时间：</span><div>2017-12-21 12:30</div></dd>
 				<dd><span>项目名称：</span><div>ERP系统设计</div></dd>
 				<dd><span>业务类型：</span><div>人力外派</div></dd>
 				<dd><span>行&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;业：</span><div>教育</div></dd>
 				<dd><span>项目预算：</span><div>￥100000.00</div></dd>
 				<dd><span>期望提成比例：</span><div>10%</div></dd>
-				<dd><span>项目描述：</span><div>描述文字描述文字描述文字描述文字描述文字描述文字描述文字描述文字</div></dd>
+				<dd><span>项目描述：</span><div>描述文字描述文字描述文字描述文字描述文字描述文字描述文字描述文字</div></dd> -->
 			</dl>
 		</div>
 			
