--- a/h5/perfectInfo.html
+++ b/h5/perfectInfo.html
@@ -17,7 +17,7 @@
 				<dd><span>所在公司：</span><div><input type="text" name="company" placeholder="请输入所在公司名称" /></div></dd>
 				<dd class="selectProfession"><span class="sign">职业类型：</span><div><p>请选择职业类型</p><i></i></div></dd>
 			</dl>
-			<div class="agreeContract"><i></i>我已阅读并同意签约<a href="">《线上合同》</a></div>
+			<div class="agreeContract"><i></i>我已阅读并同意签约<a href="hetong.html">《线上合同》</a></div>
 			<div class="perfectCode">
 				<div>个人二维码：<span>分享二维码发展属于个人的二级分销商</span></div>
 				<img src="http://yichuanglian.huimor.com/index/createTwoCode" alt="" />
