--- a/h5/buttJointError.html
+++ b/h5/buttJointError.html
@@ -13,7 +13,7 @@
 		<div class="detailsContent">
 			
 			<div class="subTitle">
-				<h3>发布线索流程</h3>
+				<h3>线索对接信息</h3>
 				<span></span>
 			</div>
 			
