--- a/h5/buttJointSuccess.html
+++ b/h5/buttJointSuccess.html
@@ -13,7 +13,7 @@
 	<div class="detailsContent">
 		
 		<div class="subTitle">
-			<h3>发布线索流程</h3>
+			<h3>线索对接信息</h3>
 			<span></span>
 		</div>
 		
@@ -26,14 +26,15 @@
 		<div class="detailsSum">
 			<p>我的上级：</p>
 			<div>
-				<img id="upperImg" src="" alt="" />
+				<img id="upperImg" src="" alt="" style="height:50px; width:50px;" />
 				<span id="nickName"></span>
 				<div id="percentageMoney"></div>
 			</div>
 		</div>
 		<div class="detailsStatus">
-			<div><span>我的分销金额：</span>
-				<!-- <strong id="assignSaleMoney">￥1000.00</strong> -->
+			<div>
+				<span>我的分销金额：</span>
+				<strong id="assignSaleMoney"></strong>
 			</div>
 		</div>
 		
@@ -92,15 +93,17 @@
 
 			function createDetailsStatus(data){
 				var detailsStatus = $('#detailsStatus');
+				var html = '';
 				$('#assignSaleMoney').text('￥'+data.Commission_money);
 				$('#percentageMoney').text('提成金额：￥'+data.proportion_money);
 				$('#upperImg').attr('src',data.avator);
 				$('#nickName').text(data.upname);
-				detailsStatus.html = [
+				html = [
 					'<div><span>对接状态：</span>对接成功</div>',
 					'<div><span>实际合同金额：</span><strong>￥'+data.actual_budget+'</strong></div>',
 					'<div><span>实际提成比例：</span><em>'+data.actual_proportion+'%</em></div>'
 				].join('');
+				detailsStatus.html(html);
 			}
 
 			function createCluesHtml(clues){
