--- a/h5/myRelease.html
+++ b/h5/myRelease.html
@@ -82,7 +82,7 @@
 		<div class="nothing" style="display: none;">
 			<img src="images/3-10myxxi.png" alt="" />
 			<p>很抱歉，您还没有发布任何线索信息</p>
-			<a href="">立即发布</a>
+			<a href="cluesRelease.html">立即发布</a>
 		</div>
 		<script type="text/javascript">
 
