--- a/h5/personalInfo.html
+++ b/h5/personalInfo.html
@@ -16,7 +16,7 @@
 		<div class="personalInfo">
 			<dl>
 				<dd><span>微信昵称：</span><div class="wxname"></div></dd>
-				<dd><span>微信头像：</span><div class="wximg"><img id="avator" src="images/img1.jpg" alt="" /></div></dd>
+				<dd><span>微信头像：</span><div class="wximg"><img id="avator" src="" alt="" /></div></dd>
 				<dd><span>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</span><div class="personalName"></div></dd>
 				<dd><span>所在公司：</span><div class="personalCompany"></div></dd>
 				<dd><span>职业类型：</span><div class="personalProfession"></div></dd>
