--- a/h5/changePwd.html
+++ b/h5/changePwd.html
@@ -102,17 +102,15 @@
 							img:'images/4-3gxfkui.png',
 							imgW:'1.56rem',
 							imgH:'1.5rem',
-							text:['密码格式正确']
+							text:['密码格式不正确']
 						});
-						return false;
-					}else if(code==''){
+					} else if(code==''){
 						$.toastTip({
 							img:'images/4-3gxfkui.png',
 							imgW:'1.56rem',
 							imgH:'1.5rem',
 							text:['验证码不正确']
 						});
-						return false;
 					} else {
 						$.ajax({
 					        url: 'http://yichuanglian.huimor.com/index/modpassword',
