--- a/h5/successRelease.html
+++ b/h5/successRelease.html
@@ -26,7 +26,7 @@
 					<dd><span>联系电话：</span><div class="username"></div></dd>
 					<dd><span>微信号码：</span><div class="wxnumber"></div></dd>
 					<dd><span>微信昵称：</span><div class="wxname"></div></dd>
-					<dd><span>微信头像：</span><div class="avator"><img src="images/img1.jpg" alt="" /></div></dd>
+					<dd><span>微信头像：</span><div class="avator"><img src="" alt="" /></div></dd>
 				</dl>
 			</div>
 			<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
