--- a/h5/forgetPwd.html
+++ b/h5/forgetPwd.html
@@ -87,7 +87,15 @@
 				var pwd=$('input[type="password"]').val();
 				var code=$('input[name="code"]').val();
 				var reg = /^[A-Za-z0-9]{6,12}$/;
-				if(pwd==''){
+				var telReg = /^[1][3,4,5,7,8][0-9]{9}$/; 
+				if ((tel=='') || (tel.length!=11) || !telReg.test(tel)) {
+					$.toastTip({
+						img:'images/4-3gxfkui.png',
+						imgW:'1.56rem',
+						imgH:'1.5rem',
+						text:['手机号码不正确']
+					});
+				}else if(pwd==''){
 					$.toastTip({
 						img:'images/4-3gxfkui.png',
 						imgW:'1.56rem',
